apache/db-mysql/namespace-nginx.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    app: mysql
