apache/db-mysql/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mysql-ns
  labels:
    app: mysql
