apache/db-mysql/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: nginx

spec:

  containers:
  - name: nginx-pod
    image: nginx:latest
    ports:
    - containerPort: 80
