apache/db-mysql/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-statefulset
  namespace: mysql-ns

spec:
  serviceName: mysql-svc
  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      tolerations:
        - key: "prod"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"

      containers:
        - name: mysql-statefulset-pod
          image: mysql:8.0

          ports:
          - containerPort: 3306

          livenessProbe:
            httpGet:
              path: /health
              port: 3306
            initailDelaySeconds: 30       # wait for first one are done after run
            periodSeconds: 10           # check every time whithin 10s 
            failureThreshold:  2  # if two time's got fail so restart container 

          readinessProbe:
            httpGet:
              path: /ready
              port: 3306
            initailDelaySeconds: 15
            periodSeconds: 5 
            faliureThreshold: 3 


          volumeMounts:
            - name: mysql-data-claim-pvc
              mountPath: /var/lib/mysql

  volumeClaimTemplates:
    - metadata:
        name: mysql-data-claim-pvc

      spec:
        accessModes:
          - ReadWriteOnce

        storageClassName: standard

        resources:
          requests:
            storage: 2Gi
