apache/db-mysql/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service-db
  namespace: mysql-ns
  labels:
    app: mysql

spec:
  clusterIP: None # headless service for pod to pod communication 
  selector:
    app: mysql
  ports:
    - name: mysql-db-port
      protocol: UDP/TCP
      port: 3306
      targetPort: 3306
