apache/db-mysql/network-policy.yml
apiVersion: Networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-network-policy
  namespace: mysql-ns
